testing functionality done